--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -73,7 +73,7 @@ First line of institution2 address\\
 \section{Related Works}
 \subsection{Whitened Histograms of Orientations (WHO)}
 % History of Whitening and how whitening works
-Recently, Hariharan \etal. introduced Whitened Histograms of Orientations (WHO) \cite{Hariharan12}, which used statistics from natural images to whiten HOG templates, making them more discriminative. Whitening is a common signal processing operation for decorrelating a set of random variables \cite{Martinsson05, Belouchrani00}. More formally, suppose that we have a $k$-dimensional random variable $X \in \mathcal{R}^k$ with $Cov(X)=\Sigma$. By whitening the signal, i.e., $\tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X])$, we remove 2nd order correlation between all features. So, all elements in the random variable $\tilde{X} = \left[\tilde{X}_1, \tilde{X}_2, \dots, \tilde{X}_k\right]$, become more independent. In the context of HOG features, a whitened HOG template will produce Gaussian noise when convolved with a random natural image, but a delta-like response on an image matching the template. WHO templates are more discriminative than standard HOG templates because they only capture the gradients that differentiate the object from random images.
+Recently, Hariharan \emph{et al.} introduced Whitened Histograms of Orientations (WHO) \cite{Hariharan12}, which used statistics from natural images to whiten HOG templates, making them more discriminative. Whitening is a common signal processing operation for decorrelating a set of random variables \cite{Martinsson05, Belouchrani00}. More formally, suppose that we have a $k$-dimensional random variable $X \in \mathcal{R}^k$ with $Cov(X)=\Sigma$. By whitening the signal, i.e., $\tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X])$, we remove 2nd order correlation between all features. So, all elements in the random variable $\tilde{X} = \left[\tilde{X}_1, \tilde{X}_2, \dots, \tilde{X}_k\right]$, become more independent. In the context of HOG features, a whitened HOG template will produce Gaussian noise when convolved with a random natural image, but a delta-like response on an image matching the template. WHO templates are more discriminative than standard HOG templates because they only capture the gradients that differentiate the object from random images.
 
 \textcolor{red}{Should we mention how our method improves on this (ie by using CG)?}
 
@@ -88,7 +88,7 @@ Many methods have attempted to move object detection towards richer outputs, esp
 
 The methods above perform discrete pose estimation, quantizing the viewing sphere into a number of poses and selecting the best one during inference. Fine-grained pose estimators, in contrast, can infer continuous (or arbitrarily fine-grained) poses. One such method from \cite{Zia13} aligns a 3D deformable part-based wireframe model with input images to accurately predict object poses.
 
-More recently, \cite{Aubry14, Lim14} made progress in joint instance-level object detection and pose estimation. To estimate pose they use synthetic renderings of CAD models to learn discriminative mid-level patches. \cite{Aubry14} calibrates these patches on a small set of real images, while \cite{Lim14} presents a method for learning the relative discriminativeness of the patches.
+More recently, \cite{Aubry14, Lim14} made progress in joint instance-level object detection and pose estimation. To estimate pose they use synthetic renderings of CAD models to learn discriminative mid-level patches. \cite{Aubry14} calibrates these patches on a small set of real images, while \cite{Lim14} present a method for learning the relative discriminativeness of the patches.
 
 \textcolor{red}{Again, should we highlight the differences between these methods and ours?}
 
@@ -257,7 +257,10 @@ We use the GPU to parallelize the lookup of the correct autocovariance cells dur
   \label{fig:rendering}
   \end{figure}
  
-To whiten a signal $x$, we have to solve $\Sigma w = x - \mu$ which takes $O(n^3)$ time. In \cite{Hariharan12}, the authors make use of the fact that covariance matrices are Hermitian and positive semidefinite to solve the system via the Cholesky decomposition, which is twice as fast as the LU decomposition. However, by considering the properties of the covariance matrix of the HOG template, we show that the conjugate gradient method can further speed up the whitening stage.
+To whiten a signal $x$, we have to solve $\Sigma w = x - \mu$. In \cite{Hariharan12}, the authors make use of the fact that covariance matrices are Hermitian and positive semidefinite to solve the system via the Cholesky decomposition, which is twice as fast as the LU decomposition. These decompositions require $O(n^3)$ time, whereas the conjugate gradient method takes $O(n^2\kappa)$ time, where $\kappa$ is the condition number of the matrix. This makes conjugate gradient a faster option for matrices with small condition numbers relative to their size.
+
+Figure \ref{fig:spectral} shows the singular values of a covariance matrix for one HOG template after a small regularization constant is added to the diagonal. The condition number of of the matrix is \scream{x}, much smaller than the size of the matrix (7500). As a result, conjugate gradient converges in \scream{x ms}, two orders of magnitude faster than the system can be solved using the Cholesky factorization (\scream{5 s}).
+
   
 %  If we use a high resolution template such as \ref{fig:rendering}
 
@@ -269,9 +272,9 @@ To whiten a signal $x$, we have to solve $\Sigma w = x - \mu$ which takes $O(n^3
 
 %In our setting, we used high resolution template which has more than 250 HOG cells. This result in $\Sigma \in \mathcal{R}^{7500 \times 7500}$. It takes about 9 seconds if we use LU decomposition and 5 seconds if we use Cholesky decomposition.  % The default way of solving the linear equation in many linear algebra library is decomposing the matrix using LU Decomposition (in MATLAB the default method of backslash operator) which takes $O(\frac{2}{3}n^3)$ flops for $n\times n$ matrix. Since the matrix, $\Sigma + \lambda I$ is Hermitian and Positive Semi Definite. We can speed up using Cholesky Decomposition. 
 
-Figure \ref{fig:spectral} shows the singular values of a template covariance matrix with a small regularization constant added to the diagonal. The singular values are clustered in small region and most of the energies are concentrated on the first \scream{x} singular values. Therefore, conjugate gradient will converge in $O(n^2\kappa)$ time, faster 
 
-We also used iterative Conjugate Gradient to make use of low rank property of the covariance \cite{Gharbi12}. After adding small regularization, the regularized covariance matrix has nice spectral property (Figure \ref{fig:spectral}). The singular values are clustered in small region and most of the energies are concentrated on the first (number) singular values. Thus, the conjugate gradients stage doesn't go upto the size of the matrix to converge.
+
+%We also used iterative Conjugate Gradient to make use of low rank property of the covariance \cite{Gharbi12}. After adding small regularization, the regularized covariance matrix has nice spectral property (Figure \ref{fig:spectral}). The singular values are clustered in small region and most of the energies are concentrated on the first (number) singular values. Thus, the conjugate gradients stage doesn't go upto the size of the matrix to converge.
 
 \begin{figure}[t]
   \begin{center}
@@ -300,20 +303,20 @@ We empirically found out that NZ-WHO performs reasonably well without time consu
 
 \begin{table*}[!htbp]
     \begin{center}
-\begin{tabular}{|c|c|r|c|r|}
+\begin{tabular}{|c|c|c|c|c|}
 \hline
-Methods (AP/MPPE) & before calibration  & time & after Calibration \cite{Aubry14} & time \\
+Methods &  without Calibration (AP/AVP) & time & w/ Calibration \cite{Aubry14} (AP/AVP) & time \\
 \hline\hline
-HOG\cite{Dalal05}     & 72.3 / 65.0  &  31ms  & 60.4 / 50.2                 &   8.7 sec \\ 
-WHO\cite{Hariharan12} & 82.1 / 85.4  &  3811ms&                             &   12.4 sec  \\
-WHO-CG                & 81.7 / \textbf{84.9}  &  104ms &     83.7 / 87.3             &   8.3 sec \\
-WHO-CG-Z              & 54.4 / 65.1  &  103ms & \textbf{92.8} / 86.7 &   8.7 sec  \\
+HOG\cite{Dalal05}     & 72.28/48.38  &  31ms  & 60.37/50.19               &   8.7 sec \\ 
+WHO-Chol\cite{Hariharan12} &              &3811ms    &                           &   12.4 sec  \\
+WHO-CG                & 81.70/74.20  &104ms &     83.714/75.37              &   8.3 sec \\
+WHO-CG-Z              & 54.42/49.71  &103ms & \textbf{92.80}/\textbf{81.44} &   8.7 sec  \\
 % NZC-WHO-Z    & 89.10/\textbf{78.64} &    & 91.15/74.79                  &     \\
-NZ-WHO-CG        & \textbf{90.0} / 82.8 & 79ms & 90.3 / \textbf{86.8}                   &  8.5 sec   \\
+NZ-WHO-CG        & \textbf{90.00}/78.23 & 79ms & 90.31/78.00                   &  8.5 sec   \\
 \hline
 \end{tabular}
 \end{center}
-\caption{Average Precision(AP) and Mean Precision in Pose Estimation (MPPE) \cite{Lopez-Sastre11} variations of WHO on 3DObject Car dataset\cite{Savarese07}. WHO refers to standard WHO using the method presented in \cite{Hariharan12}, WHO-CG uses iterative Conjugate Gradient method to generate WHO. WHO-CG-Z uses whiten the whole template and zero out textureless region. NZ-WHO-CG is the NZ-WHO which whitens only non-zero cells using iterative Conjugate Gradient method. The time column indicates the time to generate one template. We followed calibration procedure presented in \cite{Aubry14}.}
+\caption{Average Precision(AP) and Average Viewpoint Precision(AVP) \cite{Xiang14} of variations of WHO on 3DObject Car dataset\cite{Savarese07}. WHO\cite{Hariharan12} whitens all cell, WHO-ZZ whitens all cell then zero out textureless region. NZC-WHO-ZZ first substract mean $\mu$ on non-zero cells and whiten all cells then zero out textureless region. NZ-WHO whitens only non-zero cell. Note that WHO-ZZ got dramatic performance boost after calibration due to strong impact of substracting $\mu$ from all textureless region}
 \label{tab:who_initializations}
 \end{table*}
 
@@ -416,49 +419,37 @@ We modeled the distribution of the convolution as an exponential distribution an
 We run experiments on PASCAL 2007 car category images with at least one car (num images) and got x percent improvement after fine tuning.
 
 % there are several advantages that was not possible such as \textbf{on-the-fly} template generation and making large number of templates  
-
-\begin{figure}[t]
-\centering
-    \includegraphics[width=0.7\linewidth]{tuning2} \\ [-5pt]
-    \caption{Different modes of Metropolis Hasting proposals, see Section \ref{sec:fine}}
- \label{fig:tuningmode}
-\end{figure}
-    
 \begin{figure}[t]
  \begin{center}
-    \setlength\tabcolsep{0pt}
-    \begin{tabular}{ccc}
-    % \includegraphics[width=0.9\linewidth]{tuning} 
-   \includegraphics[width=0.33\linewidth]{tuning/1.png} &
-   \includegraphics[width=0.33\linewidth]{tuning/2.png} &
-   \includegraphics[width=0.33\linewidth]{tuning/3.png} \\[-5pt]
-   (a) & (b) & (c)\\
-   \includegraphics[width=0.33\linewidth]{tuning/4.png} &
-   \includegraphics[width=0.33\linewidth]{tuning/5.png} &
-   \includegraphics[width=0.33\linewidth]{tuning/6.png} \\[-5pt]
-   (d) & (e) & (f)\\
-   \end{tabular}
+    \includegraphics[width=0.9\linewidth]{tuning2} 
+    \includegraphics[width=0.9\linewidth]{tuning} 
  \end{center}
  \caption{Effect of fine tuning. (left) original image, (middle) initial detection, (right) continuous fine tuning}
  \label{fig:tuning}
 \end{figure}
-
+ 
 
 
 \section{Experiments}
 
 In this section, we validate our proposed NZ-WHO templates in two different ways. First, we make a set of NZ-WHO templates for a set of CAD models from various viewpoints. Then we run the bank of NZ-WHO templates as ensembles of weak detectors and show that the rendering image can be We want to see how robust the NZ-WHO to real images a
 
-Second, we show that our method can complement the detection bounding boxes coming out of standard object detectors. This process will enrich object detection bounding boxes with 2D-3D matching which gives continuous viewpoint estimation, a CAD model (rendering, depth) and fine-grained category.  
-
-\subsection{2D-3D Matching as an Object Detector} 
-
-We created ensemble of NZ-WHO templates using 9 CAD models and measured the Average Precision (AP) of object detection task and Mean Precision in Pose Estimation (MPPE) \cite{Lopez-Sastre11}. MPPE is the average of viewpoint accuracy.  
 \subsection{Object Detection} 
 Instance-level 2D-3D matching (registration) is a difficult problem since we need a CAD model that looks similar to the object in the image. Especially, due to extreme intraclass variability of chair \cite{Aubry14} used a very large collection of CAD models to cover variety of chairs. Similarly, \cite{Lim14}
-Our ensemble of NZ-WHO templates is generated from rendering image with no calibration but shows strong performance on object detection. The baseline method are Aspect Layout Model (ALM) \cite{Xiang12} and VOC-DPM \cite{Pepik12}. Note that the baseline methods require complex 3D modeling and viewpoint annotated natural images.
-
-The detection result is on Table \ref{tab:3dobject} and example output from our method is on Figure \ref{fig:3dobject}. 
+\begin{table}[!htbp]
+  \begin{center}
+    \begin{tabular}{|c|c|c|c|}
+    \hline
+     AP/MPPE& Ours & ALM\cite{Xiang12} & VOCDPM\cite{Pepik12} \\
+    \hline\hline
+    car & \textbf{99.8}/91.7 &  98.4/93.4 & \textbf{99.8}/\textbf{97.5} \\ 
+    bicycle & 93.0/87.4 & 93.0/91.4 & \textbf{98.8}/\textbf{97.5} \\
+    \hline
+    \end{tabular}
+  \end{center}
+  \caption{Average Precision(AP) and Average Viewpoint Accuracy(AVA) on 3DObject dataset. Though we do not need any training images and made templates in few minues, it performs on par with state of the art detectors yet it gives high quality 2D-3D matching.}
+  \label{tab:3dobject}
+\end{table}
 
 \begin{figure}[h]
     \begin{center}
@@ -475,22 +466,6 @@ The detection result is on Table \ref{tab:3dobject} and example output from our 
 \caption{Detection results on 3D-Object dataset \cite{Savarese07}, each of four images have (top left) original image, (top right) top detection rendering overlaid, (bottom right) false positives, (bottom left) true positives. Each with confidence score and colored bounding box}
   \label{fig:3dobject}
 \end{figure}
-
-% Instance-level 2D-3D matching (registration) is a difficult problem since we need a CAD model that looks similar to the object in the image. Especially, due to extreme intraclass variability of chair \cite{Aubry14} used a very large collection of CAD models to cover variety of chairs. Similarly, \cite{Lim14}
-\begin{table}[!htbp]
-  \begin{center}
-    \begin{tabular}{|c|c|c|c|}
-    \hline
-     AP/MPPE& Ours & ALM\cite{Xiang12} & VOCDPM\cite{Pepik12} \\
-    \hline\hline
-    car & \textbf{99.8}/91.7 &  98.4/93.4 & \textbf{99.8}/\textbf{97.5} \\ 
-    bicycle & 93.0/87.4 & 93.0/91.4 & \textbf{98.8}/\textbf{97.5} \\
-    \hline
-    \end{tabular}
-  \end{center}
-  \caption{Average Precision(AP) and Mean Precision in Pose Estimation (MPPE) on 3DObject dataset car category. Our method produces high quality 2D-3D matching yet performs on par with state-of-the art detectors.}
-  \label{tab:3dobject}
-\end{table}
 
 
 % Also, we evaluated our method on PASCAL 2007 dataset.
@@ -516,66 +491,13 @@ High performance object detectors usually generalizes very well. It can handle v
 
 To show such ability, we evaluated our method on PASCAL 3D dataset \cite{Xiang14}. The dataset augments PASCAL 2012 images with high quality viewpoint annotations thus is ideal to measure pose estimation. The dataset proposes new metric called Average Viewpoint Precision (AVP) where it measures the area under viewpoint precision and detection recall curve. The viewpoints is measured by azimuth similarity. If the distance between predicted azimuth and ground truth azimuth is below a certain threshold, the viewpoint is correct. Note that the baseline methods (V-DPM, VOC-DPM) reported on the PASCAL 3D dataset are variants of DPM where each component of DPM account for various azimuths. Thus V-DPM and VOC-DPM provide discrete azimuth only whereas our method provides 3D viewpoint (yaw, pitch, roll), CAD instance (model index, rendering, depth) and focal length.
 
-We used detection bounding boxes and augment it using our method to give viewpoint estimation. We used detection bounding boxes from two different methods: VOC-DPM \cite{Pepik12} and R-CNN \cite{Girshick14}. VOC-DPM is a variation of DPM that can estimate viewpoint and is the state-of-the-art performance in viewpoint estimation \cite{Xiang14}. The result is on Table \ref{tab:pascal12} and precision recall curves for car using R-CNN + Ours are on Figure \ref{fig:car_cnn_ap}. 
-
-We got significant improvement on viewpoint estimation by using our method on top of general purpose detectors. Note that our method estimates azimuth, elevation, in-plane rotation, focal length estimation, fine-grained categorization whereas V-DPM, VOC-DPM only estimate discrete viewpoints.
-
-Example outputs are on Figure \ref{fig:pascal12cnn}.
-
-
-\begin{figure*}[h]
-\setlength\tabcolsep{1pt}
-\centering
-\begin{tabular}{|c|c|c|c|c|}
-   \hline
-  \includegraphics[width=0.24\textwidth]{car_cnn/1a.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/1b.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/1c.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/1d.png}  \\  
-   \hline
-  \includegraphics[width=0.24\textwidth]{car_cnn/2a.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2b.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2c.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/2e.png}  \\  
-   \hline
-  \includegraphics[width=0.24\textwidth]{car_cnn/4a.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/4b.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/4c.png} &   
-  \includegraphics[width=0.24\textwidth]{car_cnn/4d.png}  \\  
-%    \hline
-%   \includegraphics[width=0.24\textwidth]{car_cnn/10a.png} &   
-%   \includegraphics[width=0.24\textwidth]{car_cnn/10b.png} &   
-%   \includegraphics[width=0.24\textwidth]{car_cnn/10c.png} &   
-%   \includegraphics[width=0.24\textwidth]{car_cnn/10d.png}  \\  
-%   \hline 
-%   \includegraphics[width=0.24\textwidth]{bicycle_cnn/3a.png} &   
-%   \includegraphics[width=0.24\textwidth]{bicycle_cnn/3b.png} &   
-%   \includegraphics[width=0.24\textwidth]{bicycle_cnn/3c.png} &   
-%   \includegraphics[width=0.24\textwidth]{bicycle_cnn/3d.png}  \\
-  \hline
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/7a.png} &   
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/7b.png} &   
-  &\\
-  \hline
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/4a.png} &   
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/4b.png} &   
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/4c.png} &   
-  \includegraphics[width=0.24\textwidth]{bicycle_cnn/4d.png}  \\
-  \hline
-  CNN Proposals & \multicolumn{3}{|c|}{Our matching results on proposal bounding boxes} \\
-  \hline
-\end{tabular}
-\caption{Example enriched bounding boxes. Given R-CNN\cite{Girshick14} detection bounding boxes, our method predicted 2D-3D matching reasonably. On the first column, R-CNN detection bounding boxes overlaid. From the second to the last columns, output of our method given a R-CNN box. Blue boxes are R-CNN output and purple boxes are the tightest bounding box enclosing predicted CAD model}
-  \label{fig:pascal12cnn}
-\end{figure*}
-
 
 \begin{table*}[!htbp]
     \footnotesize
   \begin{center}
 \begin{tabular}{|c|c|c|c|c|c|c|}
 \hline
-AP/AVP              & V-DPM \cite{Xiang14} & VOC-DPM \cite{Pepik12}  & \cite{Pepik12} + Ours (discrete) & \cite{Pepik12} + Ours (full) & R-CNN + Ours (discrete) & R-CNN + Ours (full)\\
+AP/AVP              & VDPM \cite{Xiang14} & VOC-DPM \cite{Pepik12}  & \cite{Pepik12} + Ours (discrete) & \cite{Pepik12} + Ours (full) & R-CNN + Ours (discrete) & R-CNN + Ours (full)\\
 \hline\hline
 car-4v              & 37.2 / 20.2         & 45.6 / 36.9             & 47.6 / 42.7       & 47.6 / \textbf{42.7}        & 49.6 / 41.5         & 49.6 / 41.5\\ \hline
 car-8v              & 37.3 / 23.5         & 47.6 / 36.6             & 47.6 / \textbf{39.8}       & 47.6 / 39.5        & 49.6 / 38.0         & 49.6 / 39.0\\ \hline
@@ -592,31 +514,11 @@ bicycle-24v         & 44.4 / 14.3         & 45.9 / 16.7             & 48.1 / 21.
 \label{tab:pascal12}
 \end{table*}
 
-\begin{figure}[h]
-\setlength\tabcolsep{1pt}
-\centering
-\begin{tabular}{cc}
-  \hline
-  \includegraphics[width=0.49\linewidth]{car_cnn4_crop.png} &   
-  \includegraphics[width=0.49\linewidth]{car_cnn8_crop.png} \\   
-  \includegraphics[width=0.49\linewidth]{car_cnn16_crop.png} &   
-  \includegraphics[width=0.49\linewidth]{car_cnn24_crop.png} \\   
-  \hline
-\end{tabular}
-\caption{Average Precision (AP) and Average Viewpoint Precision (AVP) and viewpoint confusion table on PASCAL 12 car validation set using R-CNN + Ours. From the top left, 4 views, 8 views, 16 views and 24 views. Since our method only augment the object detection, the AP remains the same for all cases. As we increase the viewpoint estimation, the AVP decreases. Note that since we estimate null viewpoint if our method fails to find match, there are more 0 viewpoint predictions (top row of confusion matrices) }
-  \label{fig:car_cnn_ap}
-\end{figure}
-
-
 \subsection{Stability of Our Method for Irregular Bounding Boxes}
 
-% Generic object detectors give overlapping detection bounding boxes of the same object which can be handled by non maximal suppression. For these overlapping detections, 
+Generic object detectors sometimes give overlapping detection bounding boxes of the same object with different aspect ratio or truncation. For instance, R-CNN \cite{Girshick14} usually gives very irregular bounding boxes since the proposals bounding boxes comes from various methods.
 
-R-CNN detection bounding boxes are irregular in shape since they come from other region proposal methods and sometimes they truncate objects. To handle such irregular shape and truncation, we added small context around the bounding boxes and run our method. 
-
-We assumed that object can be arbitrarily truncated by the bounding box and search all plausible scales and translations. This can be efficiently computed using FFT-based convolution (refer Section. \ref{sec:fft}). We put examples of such conditions in Figure \ref{fig:stability}. Although the input bounding boxes are irregular and truncate objects, our method reliably generated a reasonable prediction of pose, translation, scale and CAD model.
-
-% R-CNN \cite{Girshick14} gives very irregular bounding boxes since the proposals bounding boxes come from various methods.
+To handle such irregular shape and truncation, we added small context around the bounding boxes and run our method. We consider all possible truncation which can be efficiently computed using FFT-based convolution (refer Section. \ref{sec:fft}). We put examples of such conditions in Figure \ref{fig:stability}. Although the input bounding boxex are drastically different and have sever truncations. Our method reliably generated reasonable prediction of pose and model.
 
 \begin{figure}[h]
 \setlength\tabcolsep{5pt}
@@ -629,6 +531,7 @@ We assumed that object can be arbitrarily truncated by the bounding box and sear
 \caption{Stability of our method for overlapping R-CNN detection \cite{Girshick14}. Blue box is the R-CNN detection that is feed into the system as initial detection. Purple box and overlaid rendering is the final output of the system. Note that for various overlapping bounding boxes, our system accurately estimated the reasonable result}
   \label{fig:stability}
 \end{figure}
+
 
 % For qualitative examples, we put hand-picked results from our method Fig. \ref{fig:car} and Fig. \ref{fig:bicycle}.
 
